--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,119 +1,33 @@
-name: Build Windows Installers
+name: Build MediCore Windows
 
 on:
   push:
     branches: [main, master]
-    tags:
-      - 'v*'
-  pull_request:
-    branches: [main, master]
   workflow_dispatch:
 
-env:
-  FLUTTER_VERSION: '3.24.0'
-  GO_VERSION: '1.21'
-
 jobs:
-  # ═══════════════════════════════════════════════════════════════════════════
-  # BUILD FLUTTER APP FOR WINDOWS (x64)
-  # ═══════════════════════════════════════════════════════════════════════════
-  build-windows-x64:
+  build:
     runs-on: windows-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version: '3.24.0'
           channel: 'stable'
-          cache: true
 
-      - name: Enable Windows desktop
-        run: flutter config --enable-windows-desktop
-
-      - name: Get Flutter dependencies
+      - name: Get dependencies
         working-directory: medicore_app
         run: flutter pub get
 
-      - name: Build Windows Release (x64)
+      - name: Build Windows Release
         working-directory: medicore_app
         run: flutter build windows --release
 
-      - name: Create installer with Inno Setup
-        run: |
-          choco install innosetup -y
-          iscc /DMyAppVersion="${{ github.ref_name }}" /DMyAppArch="x64" installer/medicore_setup.iss
-
-      - name: Upload Windows x64 Installer
+      - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: MediCore-Windows-x64-Installer
-          path: installer/Output/*.exe
-
-      - name: Upload Windows x64 Portable
-        uses: actions/upload-artifact@v4
-        with:
-          name: MediCore-Windows-x64-Portable
+          name: MediCore-Windows-x64
           path: medicore_app/build/windows/x64/runner/Release/
-
-  # ═══════════════════════════════════════════════════════════════════════════
-  # BUILD GO SERVER FOR WINDOWS
-  # ═══════════════════════════════════════════════════════════════════════════
-  build-server-windows:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        arch: [amd64, 386]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-          cache-dependency-path: medicore_server/go.sum
-
-      - name: Build Server (${{ matrix.arch }})
-        working-directory: medicore_server
-        env:
-          GOOS: windows
-          GOARCH: ${{ matrix.arch }}
-        run: |
-          go build -ldflags="-s -w" -o medicore_server_${{ matrix.arch }}.exe ./cmd/server
-
-      - name: Upload Server Binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: MediCore-Server-Windows-${{ matrix.arch }}
-          path: medicore_server/medicore_server_${{ matrix.arch }}.exe
-
-  # ═══════════════════════════════════════════════════════════════════════════
-  # CREATE RELEASE PACKAGES
-  # ═══════════════════════════════════════════════════════════════════════════
-  create-release:
-    needs: [build-windows-x64, build-server-windows]
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            artifacts/**/*.exe
-            artifacts/**/*.zip
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
