--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -8,15 +8,6 @@ on:
 jobs:
   build-windows:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        include:
-          - arch: x64
-            flutter-arch: x64
-            vc-redist: https://aka.ms/vs/17/release/vc_redist.x64.exe
-          - arch: x86
-            flutter-arch: x86
-            vc-redist: https://aka.ms/vs/17/release/vc_redist.x86.exe
     
     steps:
       - name: Checkout
@@ -32,33 +23,37 @@ jobs:
         working-directory: medicore_app
         run: flutter pub get
 
-      - name: Build Windows ${{ matrix.arch }} Release
+      - name: Build Windows x64 Release
         working-directory: medicore_app
         run: flutter build windows --release
-        env:
-          FLUTTER_BUILD_WINDOWS_ARCH: ${{ matrix.flutter-arch }}
 
-      - name: Download VC++ Redistributable ${{ matrix.arch }}
+      - name: Download VC++ Redistributables (both x64 and x86)
         run: |
-          $buildPath = "medicore_app/build/windows/${{ matrix.flutter-arch }}/runner/Release"
-          Invoke-WebRequest -Uri "${{ matrix.vc-redist }}" -OutFile "$buildPath/vc_redist_${{ matrix.arch }}.exe"
+          $buildPath = "medicore_app/build/windows/x64/runner/Release"
+          Invoke-WebRequest -Uri "https://aka.ms/vs/17/release/vc_redist.x64.exe" -OutFile "$buildPath/vc_redist.x64.exe"
+          Invoke-WebRequest -Uri "https://aka.ms/vs/17/release/vc_redist.x86.exe" -OutFile "$buildPath/vc_redist.x86.exe"
         shell: powershell
 
-      - name: Create README for ${{ matrix.arch }}
+      - name: Create README
         run: |
-          $buildPath = "medicore_app/build/windows/${{ matrix.flutter-arch }}/runner/Release"
+          $buildPath = "medicore_app/build/windows/x64/runner/Release"
           @"
           MediCore - Medical Management System
           =====================================
-          Version: Windows ${{ matrix.arch }}
-          Compatible: Windows 7, 8, 8.1, 10, 11
+          Version: Windows 64-bit
+          Compatible: Windows 7, 8, 8.1, 10, 11 (64-bit)
           
           IMPORTANT - FIRST TIME INSTALLATION:
           ====================================
           If you get "MSVCP140.dll is missing" error:
-          1. Run vc_redist_${{ matrix.arch }}.exe FIRST (only needed once)
-          2. Click "Install" and wait for completion
-          3. Then run medicore_app.exe
+          
+          1. Run vc_redist.x64.exe FIRST (only needed once)
+          2. If that doesn't work, also run vc_redist.x86.exe
+          3. Click "Install" on both and wait for completion
+          4. Then run medicore_app.exe
+          
+          Note: Both redistributables are included for maximum compatibility.
+          Most systems only need x64, but some require both.
           
           SETUP INSTRUCTIONS:
           ===================
@@ -66,29 +61,41 @@ jobs:
           
           ADMIN (Main Computer):
           - Select this on ONE computer that has the database
-          - Choose your database file (.db)
+          - Click "Sélectionner le fichier .db" 
+          - Choose your database file
+          - Click "DÉMARRER COMME ADMIN"
           - This computer will broadcast to the network
           
           CLIENT (Other Computers):
           - Select this on all other computers
+          - Click "Rechercher le serveur Admin"
           - Wait 5 seconds - the Admin will appear automatically
-          - Click on the Admin to connect
+          - Click on the Admin server to connect
           
-          All clients will work on the same database through the network!
+          All clients will work on the same database through your local network!
           
           TROUBLESHOOTING:
           ================
-          - Client can't find Admin? Make sure they're on the same network
-          - Firewall blocking? Allow medicore_app.exe in Windows Firewall
-          - Admin not broadcasting? Restart the Admin computer
+          - Client can't find Admin? 
+            * Make sure they're on the same WiFi/LAN network
+            * Check Windows Firewall - allow medicore_app.exe
+            * Make sure Admin computer is running and setup is complete
+          
+          - MSVCP140.dll error persists?
+            * Run both vc_redist files as Administrator
+            * Restart your computer after installation
+          
+          - Admin not broadcasting?
+            * Restart the Admin application
+            * Check firewall settings
           
           Support: github.com/ilyesthen/medicore
           
           "@  | Out-File -FilePath "$buildPath/README.txt" -Encoding UTF8
         shell: powershell
 
-      - name: Upload ${{ matrix.arch }} Build
+      - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: MediCore-Windows-${{ matrix.arch }}
-          path: medicore_app/build/windows/${{ matrix.flutter-arch }}/runner/Release/
+          name: MediCore-Windows-x64
+          path: medicore_app/build/windows/x64/runner/Release/
