--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -46,120 +46,129 @@ jobs:
           Copy-Item "medicore_app/installer/vcredist/vc_redist.x64.exe" "medicore_app/build/package/"
           Copy-Item "medicore_app/installer/vcredist/vc_redist.x86.exe" "medicore_app/build/package/"
           
-          # Create INSTALL.bat
+          # Create DEMARRER.bat (French for START)
           @"
           @echo off
-          echo ========================================
-          echo MediCore Installation
-          echo ========================================
+          chcp 65001 >nul
+          cls
           echo.
-          echo Installing required components...
+          echo ╔═══════════════════════════════════════════════════════╗
+          echo ║              MEDICORE - DEMARRAGE RAPIDE              ║
+          echo ╚═══════════════════════════════════════════════════════╝
+          echo.
+          echo Installation automatique des composants...
           echo.
           
-          REM Install VC++ Redistributables silently
           vc_redist.x64.exe /install /quiet /norestart
-          if exist vc_redist.x86.exe vc_redist.x86.exe /install /quiet /norestart
+          vc_redist.x86.exe /install /quiet /norestart
           
+          echo ✓ Installation terminée!
           echo.
-          echo Installation complete!
-          echo Starting MediCore...
-          echo.
-          start medicore_app.exe
-          "@ | Out-File -FilePath "medicore_app/build/package/INSTALL.bat" -Encoding ASCII
+          echo Démarrage de MediCore...
+          timeout /t 2 >nul
+          start "" medicore_app.exe
+          exit
+          "@ | Out-File -FilePath "medicore_app/build/package/DEMARRER.bat" -Encoding UTF8
           
           # Create README
           @"
           ╔══════════════════════════════════════════════════════════════╗
-          ║                    MEDICORE - INSTALLATION                   ║
-          ║          Système de Gestion Médicale pour Cabinet           ║
+          ║                 MEDICORE - INSTALLATION SIMPLE               ║
+          ║          Système de Gestion Médicale pour Cabinet            ║
           ╚══════════════════════════════════════════════════════════════╝
           
-          ⚠️  IMPORTANT - LISEZ CECI D'ABORD ⚠️
-          ========================================
           
-          SI WINDOWS BLOQUE L'APPLICATION:
-          --------------------------------
-          1. Windows peut afficher "Windows a protégé votre PC"
-          2. Cliquez sur "Informations complémentaires"
-          3. Puis cliquez "Exécuter quand même"
+          ═══════════════════════════════════════════════════════════════
+          CONFIGURATION REQUISE:
+          ═══════════════════════════════════════════════════════════════
           
-          C'EST NORMAL! L'application n'est pas signée numériquement.
-          Elle est 100% sûre.
+          ✅ Windows 7, 8, 10, 11 (VERSION 64-BIT SEULEMENT)
+          ❌ Ne fonctionne PAS sur Windows 32-bit (architecture x86)
           
-          SI ANTIVIRUS BLOQUE (Avira, Avast, etc.):
-          -----------------------------------------
-          1. Ouvrez votre antivirus
-          2. Ajoutez le dossier MediCore aux EXCLUSIONS
-          3. Redémarrez l'installation
+          → Pour vérifier: Ordinateur → Propriétés → "Système d'exploitation 64 bits"
           
           
-          📥 INSTALLATION RAPIDE:
-          ======================
+          ═══════════════════════════════════════════════════════════════
+          INSTALLATION EN 3 ÉTAPES:
+          ═══════════════════════════════════════════════════════════════
           
-          Méthode 1 - AUTOMATIQUE (Recommandé):
-          -------------------------------------
-          ➜ Double-cliquez sur: INSTALL.bat
-          ➜ Cliquez "Oui" si Windows demande l'autorisation
-          ➜ L'application démarre automatiquement
+          ÉTAPE 1: Extraire le ZIP
+          -------------------------
+          Extraire tous les fichiers dans un dossier (ex: C:\MediCore)
           
-          Méthod 2 - MANUELLE:
-          -------------------
-          1. Double-cliquez vc_redist.x64.exe → Installez
-          2. Double-cliquez vc_redist.x86.exe → Installez (si nécessaire)
-          3. Double-cliquez medicore_app.exe
+          ÉTAPE 2: Autoriser l'application
+          ---------------------------------
+          Windows SmartScreen ou Antivirus vont BLOQUER l'app.
+          C'EST NORMAL! L'app n'est pas signée (coûte 300€/an).
           
+          👉 Windows SmartScreen:
+             1. Clic droit sur DEMARRER.bat → "Exécuter en tant qu'administrateur"
+             2. Si alerte: "Informations complémentaires" → "Exécuter quand même"
           
-          🚀 PREMIÈRE UTILISATION:
-          ========================
+          👉 Avira / Avast / Windows Defender:
+             1. Ouvrir l'antivirus → Paramètres → Exclusions
+             2. Ajouter le dossier C:\MediCore complet
+             3. Recommencer
           
-          L'application vous demandera de choisir:
+          ÉTAPE 3: Lancer
+          ----------------
+          Double-clic sur: DEMARRER.bat
           
-          🖥️  ADMIN (Ordinateur Principal):
-              ✓ Choisissez ceci sur UN SEUL ordinateur
-              ✓ Importez votre base de données (.db)
-              ✓ Les autres ordinateurs se connecteront à celui-ci
-          
-          💻 CLIENT (Autres Ordinateurs):
-              ✓ Choisissez ceci sur tous les autres postes
-              ✓ L'Admin sera détecté automatiquement
-              ✓ Cliquez dessus pour vous connecter
-          
-          
-          🔧 DÉPANNAGE:
-          =============
-          
-          ❌ "MSVCP140.dll manquant":
-             → Exécutez INSTALL.bat en tant qu'administrateur
-             → OU installez les deux vc_redist manuellement
-          
-          ❌ Le CLIENT ne trouve pas l'ADMIN:
-             → Vérifiez que les deux PC sont sur le même réseau WiFi/LAN
-             → Désactivez temporairement le pare-feu pour tester
-             → Sur l'Admin, autorisez medicore_app.exe dans le pare-feu
-          
-          ❌ Windows SmartScreen bloque:
-             → Normal! Cliquez "Informations complémentaires"
-             → Puis "Exécuter quand même"
-          
-          ❌ Antivirus bloque (fausse alerte):
-             → Ajoutez le dossier aux exclusions de l'antivirus
-             → OU désactivez temporairement l'antivirus
+          OU MANUEL:
+          1. Double-clic: vc_redist.x64.exe (installer)
+          2. Double-clic: vc_redist.x86.exe (installer)
+          3. Double-clic: medicore_app.exe
           
           
-          💡 CONFIGURATION SYSTÈME:
-          =========================
-          Compatible: Windows 7, 8, 8.1, 10, 11 (64-bit)
-          Réseau: WiFi ou câble Ethernet
-          Port utilisé: 50051 (TCP/UDP)
+          ═══════════════════════════════════════════════════════════════
+          PREMIÈRE UTILISATION - CHOIX ADMIN OU CLIENT:
+          ═══════════════════════════════════════════════════════════════
+          
+          Au démarrage, l'app demande:
+          
+          🖥️  ADMIN → Ordinateur principal avec la base de données
+             • Importez votre fichier .db
+             • Cet ordi diffuse sur le réseau
+          
+          💻 CLIENT → Autres ordinateurs
+             • Détecte automatiquement l'Admin
+             • Cliquez pour connecter
           
           
-          📧 SUPPORT:
-          ===========
-          GitHub: https://github.com/ilyesthen/medicore
+          ═══════════════════════════════════════════════════════════════
+          PROBLÈMES FRÉQUENTS:
+          ═══════════════════════════════════════════════════════════════
+          
+          ❌ "Ne peut pas démarrer, MSVCP140.dll manquant"
+             → Lancez DEMARRER.bat en admin (clic droit)
+          
+          ❌ "L'app ne démarre pas sur Windows 7/8"
+             → Vérifiez: c'est bien Windows 64-bit?
+             → Si 32-bit: impossible, l'app ne peut pas fonctionner
+          
+          ❌ "CLIENT ne trouve pas ADMIN"
+             → Même réseau WiFi/LAN?
+             → Pare-feu Windows: autoriser medicore_app.exe
+          
+          ❌ "Antivirus supprime l'app"
+             → Ajouter aux exclusions (c'est une fausse alerte)
+          
+          
+          ═══════════════════════════════════════════════════════════════
+          POURQUOI 64-BIT SEULEMENT?
+          ═══════════════════════════════════════════════════════════════
+          
+          Flutter (la technologie utilisée) ne supporte QUE le 64-bit
+          pour Windows. Ce n'est pas un choix, c'est une limitation
+          technique.
+          
+          ~95% des PC depuis 2010 sont 64-bit. Les PC 32-bit sont très
+          rares maintenant.
           
           
           ═══════════════════════════════════════════════════════════════
                           MediCore v1.0 - 2025
+                  https://github.com/ilyesthen/medicore
           ═══════════════════════════════════════════════════════════════
           "@ | Out-File -FilePath "medicore_app/build/package/LISEZ-MOI.txt" -Encoding UTF8
           
